fix: use rem units to improve spacing across themes

--- a/src/Totals/resources/css/common.scss
+++ b/src/Totals/resources/css/common.scss
@@ -1,5 +1,9 @@
 // This file used for Total styles common to the frontend and editor
 
+.give-totals__message {
+	margin: 1rem 0;
+}
+
 .give-totals__goal {
 	height: auto;
 }
@@ -32,5 +36,5 @@
 	display: block;
 	opacity: 0.8;
 	font-weight: 500;
-	margin: 0 !important;
+	margin: 1rem 0 0.5rem 0;
 }
